--- a/src/main/resources/static/news.html
+++ b/src/main/resources/static/news.html
@@ -164,13 +164,18 @@
                 <div class="car_bg">
                     <!--Begin 购物车未登录 Begin-->
                     <ul v-if="$data.user.username" class="cars">
-                        <li v-for="(item, index) in products" :key="index" >
-                            <div class="img"><a href="#"><img height="58" :src="'http://localhost:8080/getImage?filePath=' + item.filePath" width="58"/></a></div>
-                            <div class="name"><a href="#">{{item.name}}</a></div>
-                            <div class="price"><font color="#ff4e00">￥{{item.price}}</font> X{{item.count}}</div>
-                        </li>
-                        <div class="price_sum">共计&nbsp; <font color="#ff4e00">￥</font><span>{{totalPrice}}</span></div>
-                        <div class="price_a"><a href="#">去购物车结算</a></div>
+                        <div v-if="$data.productLength">
+                            <li v-for="(item, index) in products" :key="index" >
+                                <div class="img"><a href="#"><img height="58" :src="'/getImage?filePath=' + item.filePath" width="58"/></a></div>
+                                <div class="name"><a href="#">{{item.name}}</a></div>
+                                <div class="price"><font color="#ff4e00">￥{{item.price}}</font> X{{item.count}}</div>
+                            </li>
+                            <div class="price_sum">共计&nbsp; <font color="#ff4e00">￥</font><span>{{totalPrice}}</span></div>
+                            <div class="price_a"><a href="BuyCar.html">去购物车结算</a></div>
+                        </div>
+                        <div v-else class="un_login">
+                            购物车暂无东西
+                        </div>
                     </ul>
                     <div v-else class="un_login">
                         还未登录！<a href="Login.html" style="color:#ff4e00;">马上登录</a> 查看购物车！
@@ -190,39 +195,32 @@
                 <div class="left_n">管理中心</div>
                 <div class="left_m">
                     <div class="left_m_t t_bg1">订单中心</div>
-
                     <ul>
-                        <li><a href="Member_Product.html" class="now">我的订单</a></li>
-                        <li><a href="Member_Address.html">收货地址</a></li>
-                        <li><a href="#">缺货登记</a></li>
-                        <li><a href="#">跟踪订单</a></li>
-                    </ul>
-                </div>
-                <div class="left_m">
-                    <div class="left_m_t t_bg2">会员中心</div>
-                    <ul>
-                        <li><a href="Member_User.html">用户信息</a></li>
+                        <li><a href="userOrder.html" class="now">我的订单</a></li>
+                        <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="order.html">全部订单</a></li>
+                        <li><a href="Member_Address.html">地址管理</a></li>
                         <li><a href="Member_Collect.html">我的收藏</a></li>
-                        <li><a href="Member_Msg.html">我的留言</a></li>
-                        <li><a href="Member_Links.html">推广链接</a></li>
-                        <li><a href="#">我的评论</a></li>
                     </ul>
                 </div>
                 <div class="left_m">
-                    <div class="left_m_t t_bg3">账户中心</div>
+                    <div class="left_m_t t_bg2">用户中心</div>
                     <ul>
-                        <li><a href="Member_Safe.html">账户安全</a></li>
-                        <li><a href="Member_Packet.html">我的红包</a></li>
-                        <li><a href="Member_Money.html">资金管理</a></li>
+                        <li><a href="User_detail.html">用户信息</a></li>
+                        <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="Member_Member.html">用户列表</a></li>
+                    </ul>
+                </div>
+                <div class="left_m"  v-if="$data.user.roleId===1||$data.user.roleId===2">
+                    <div class="left_m_t t_bg3">商品管理</div>
+                    <ul>
+                        <li><a href="Category.html">分类管理</a></li>
+                        <li><a href="Member_Product.html">商品管理</a></li>
                     </ul>
                 </div>
                 <div class="left_m">
-                    <div class="left_m_t t_bg4">分销中心</div>
+                    <div class="left_m_t t_bg4">咨询管理</div>
                     <ul>
-                        <li><a href="Member_Member.html">我的会员</a></li>
-                        <li><a href="Member_Results.html">我的业绩</a></li>
-                        <li><a href="Member_Commission.html">我的佣金</a></li>
-                        <li><a href="Member_Cash.html">申请提现</a></li>
+                        <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="news.html">咨询列表</a></li>
+                        <li><a href="user_news.html">所有咨询</a></li>
                     </ul>
                 </div>
             </div>
@@ -251,91 +249,91 @@
                         <span><a @click="delNews(record.id)">删除</a></span>
                     </div>
                 </a-table>
-        </div>
-        <!--End 用户中心 End-->
-        <!--Begin Footer Begin -->
-        <div class="b_btm_bg b_btm_c">
-            <div class="b_btm">
-                <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
-                    <tr>
-                        <td width="72"><img src="images/b1.png" width="62" height="62" /></td>
-                        <td><h2>正品保障</h2>正品行货  放心购买</td>
-                    </tr>
-                </table>
-                <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
-                    <tr>
-                        <td width="72"><img src="images/b2.png" width="62" height="62" /></td>
-                        <td><h2>满38包邮</h2>满38包邮 免运费</td>
-                    </tr>
-                </table>
-                <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
-                    <tr>
-                        <td width="72"><img src="images/b3.png" width="62" height="62" /></td>
-                        <td><h2>天天低价</h2>天天低价 畅选无忧</td>
-                    </tr>
-                </table>
-                <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
-                    <tr>
-                        <td width="72"><img src="images/b4.png" width="62" height="62" /></td>
-                        <td><h2>准时送达</h2>收货时间由你做主</td>
-                    </tr>
-                </table>
             </div>
-        </div>
-        <div class="b_nav">
-            <dl>
-                <dt><a href="#">新手上路</a></dt>
-                <dd><a href="#">售后流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">订购方式</a></dd>
-                <dd><a href="#">隐私声明</a></dd>
-                <dd><a href="#">推荐分享说明</a></dd>
-            </dl>
-            <dl>
-                <dt><a href="#">配送与支付</a></dt>
-                <dd><a href="#">货到付款区域</a></dd>
-                <dd><a href="#">配送支付查询</a></dd>
-                <dd><a href="#">支付方式说明</a></dd>
-            </dl>
-            <dl>
-                <dt><a href="#">会员中心</a></dt>
-                <dd><a href="#">资金管理</a></dd>
-                <dd><a href="#">我的收藏</a></dd>
-                <dd><a href="#">我的订单</a></dd>
-            </dl>
-            <dl>
-                <dt><a href="#">服务保证</a></dt>
-                <dd><a href="#">退换货原则</a></dd>
-                <dd><a href="#">售后服务保证</a></dd>
-                <dd><a href="#">产品质量保证</a></dd>
-            </dl>
-            <dl>
-                <dt><a href="#">联系我们</a></dt>
-                <dd><a href="#">网站故障报告</a></dd>
-                <dd><a href="#">购物咨询</a></dd>
-                <dd><a href="#">投诉与建议</a></dd>
-            </dl>
-            <div class="b_tel_bg">
-                <a href="#" class="b_sh1">新浪微博</a>
-                <a href="#" class="b_sh2">腾讯微博</a>
-                <p>
-                    服务热线：<br />
-                    <span>400-123-4567</span>
-                </p>
+            <!--End 用户中心 End-->
+            <!--Begin Footer Begin -->
+            <div class="b_btm_bg b_btm_c">
+                <div class="b_btm">
+                    <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
+                        <tr>
+                            <td width="72"><img src="images/b1.png" width="62" height="62" /></td>
+                            <td><h2>正品保障</h2>正品行货  放心购买</td>
+                        </tr>
+                    </table>
+                    <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
+                        <tr>
+                            <td width="72"><img src="images/b2.png" width="62" height="62" /></td>
+                            <td><h2>满38包邮</h2>满38包邮 免运费</td>
+                        </tr>
+                    </table>
+                    <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
+                        <tr>
+                            <td width="72"><img src="images/b3.png" width="62" height="62" /></td>
+                            <td><h2>天天低价</h2>天天低价 畅选无忧</td>
+                        </tr>
+                    </table>
+                    <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
+                        <tr>
+                            <td width="72"><img src="images/b4.png" width="62" height="62" /></td>
+                            <td><h2>准时送达</h2>收货时间由你做主</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-            <div class="b_er">
-                <div class="b_er_c"><img src="images/er.gif" width="118" height="118" /></div>
-                <img src="images/ss.png" />
+            <div class="b_nav">
+                <dl>
+                    <dt><a href="#">新手上路</a></dt>
+                    <dd><a href="#">售后流程</a></dd>
+                    <dd><a href="#">购物流程</a></dd>
+                    <dd><a href="#">订购方式</a></dd>
+                    <dd><a href="#">隐私声明</a></dd>
+                    <dd><a href="#">推荐分享说明</a></dd>
+                </dl>
+                <dl>
+                    <dt><a href="#">配送与支付</a></dt>
+                    <dd><a href="#">货到付款区域</a></dd>
+                    <dd><a href="#">配送支付查询</a></dd>
+                    <dd><a href="#">支付方式说明</a></dd>
+                </dl>
+                <dl>
+                    <dt><a href="#">会员中心</a></dt>
+                    <dd><a href="#">资金管理</a></dd>
+                    <dd><a href="#">我的收藏</a></dd>
+                    <dd><a href="#">我的订单</a></dd>
+                </dl>
+                <dl>
+                    <dt><a href="#">服务保证</a></dt>
+                    <dd><a href="#">退换货原则</a></dd>
+                    <dd><a href="#">售后服务保证</a></dd>
+                    <dd><a href="#">产品质量保证</a></dd>
+                </dl>
+                <dl>
+                    <dt><a href="#">联系我们</a></dt>
+                    <dd><a href="#">网站故障报告</a></dd>
+                    <dd><a href="#">购物咨询</a></dd>
+                    <dd><a href="#">投诉与建议</a></dd>
+                </dl>
+                <div class="b_tel_bg">
+                    <a href="#" class="b_sh1">新浪微博</a>
+                    <a href="#" class="b_sh2">腾讯微博</a>
+                    <p>
+                        服务热线：<br />
+                        <span>400-123-4567</span>
+                    </p>
+                </div>
+                <div class="b_er">
+                    <div class="b_er_c"><img src="images/er.gif" width="118" height="118" /></div>
+                    <img src="images/ss.png" />
+                </div>
             </div>
-        </div>
-        <div class="btmbg">
-            <div class="btm">
-                备案/许可证编号：蜀ICP备12009302号-1-www.dingguagua.com   Copyright © 2015-2018 尤洪商城网 All Rights Reserved. 复制必究 , Technical Support: Dgg Group <br />
-                <img src="images/b_1.gif" width="98" height="33" /><img src="images/b_2.gif" width="98" height="33" /><img src="images/b_3.gif" width="98" height="33" /><img src="images/b_4.gif" width="98" height="33" /><img src="images/b_5.gif" width="98" height="33" /><img src="images/b_6.gif" width="98" height="33" />
+            <div class="btmbg">
+                <div class="btm">
+                    备案/许可证编号：蜀ICP备12009302号-1-www.dingguagua.com   Copyright © 2015-2018 尤洪商城网 All Rights Reserved. 复制必究 , Technical Support: Dgg Group <br />
+                    <img src="images/b_1.gif" width="98" height="33" /><img src="images/b_2.gif" width="98" height="33" /><img src="images/b_3.gif" width="98" height="33" /><img src="images/b_4.gif" width="98" height="33" /><img src="images/b_5.gif" width="98" height="33" /><img src="images/b_6.gif" width="98" height="33" />
+                </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 </body>
 <script type="text/javascript" src="js/request.js"></script>
@@ -370,6 +368,7 @@
             user:{
                 username:"",
                 id:null,
+                roleId:null,
             },
             products:[],
 
@@ -386,6 +385,7 @@
                         console.log(resp.data);
                         this.user.username=resp.data.userName
                         this.user.id=resp.data.id
+                        this.user.roleId=resp.data.roleId
                     });
             },
             initCat() {
