--- a/src/main/resources/static/userOrder.html
+++ b/src/main/resources/static/userOrder.html
@@ -161,13 +161,18 @@
                 <div class="car_bg">
                     <!--Begin 购物车未登录 Begin-->
                     <ul v-if="$data.user.username" class="cars">
-                        <li v-for="(item, index) in products" :key="index" >
-                            <div class="img"><a href="#"><img height="58" :src="'http://localhost:8080/getImage?filePath=' + item.filePath" width="58"/></a></div>
-                            <div class="name"><a href="#">{{item.name}}</a></div>
-                            <div class="price"><font color="#ff4e00">￥{{item.price}}</font> X{{item.count}}</div>
-                        </li>
-                        <div class="price_sum">共计&nbsp; <font color="#ff4e00">￥</font><span>{{totalPrice}}</span></div>
-                        <div class="price_a"><a href="BuyCar.html">去购物车结算</a></div>
+                        <div v-if="$data.productLength">
+                            <li v-for="(item, index) in products" :key="index" >
+                                <div class="img"><a href="#"><img height="58" :src="'/getImage?filePath=' + item.filePath" width="58"/></a></div>
+                                <div class="name"><a href="#">{{item.name}}</a></div>
+                                <div class="price"><font color="#ff4e00">￥{{item.price}}</font> X{{item.count}}</div>
+                            </li>
+                            <div class="price_sum">共计&nbsp; <font color="#ff4e00">￥</font><span>{{totalPrice}}</span></div>
+                            <div class="price_a"><a href="BuyCar.html">去购物车结算</a></div>
+                        </div>
+                        <div v-else class="un_login">
+                            购物车暂无东西
+                        </div>
                     </ul>
                     <div v-else class="un_login">
                         还未登录！<a href="Login.html" style="color:#ff4e00;">马上登录</a> 查看购物车！
@@ -187,33 +192,32 @@
                 <div class="left_n">管理中心</div>
                 <div class="left_m">
                     <div class="left_m_t t_bg1">订单中心</div>
-
                     <ul>
-                        <li><a href="order.html" class="now">我的订单</a></li>
-                        <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="">全部订单</a></li>
+                        <li><a href="userOrder.html" class="now">我的订单</a></li>
+                        <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="order.html">全部订单</a></li>
+                        <li><a href="Member_Address.html">地址管理</a></li>
+                        <li><a href="Member_Collect.html">我的收藏</a></li>
                     </ul>
                 </div>
                 <div class="left_m">
-                    <div class="left_m_t t_bg2">会员中心</div>
+                    <div class="left_m_t t_bg2">用户中心</div>
                     <ul>
-                        <li><a href="">用户信息</a></li>
-                        <li><a href="">用户列表</a></li>
-                        <li><a href="">我的收藏</a></li>
+                        <li><a href="User_detail.html">用户信息</a></li>
+                        <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="Member_Member.html">用户列表</a></li>
                     </ul>
                 </div>
-                <div class="left_m">
+                <div class="left_m"  v-if="$data.user.roleId===1||$data.user.roleId===2">
                     <div class="left_m_t t_bg3">商品管理</div>
                     <ul>
-                        <li><a href="">分类管理</a></li>
+                        <li><a href="Category.html">分类管理</a></li>
                         <li><a href="Member_Product.html">商品管理</a></li>
-                        <li><a href="product_add.html">分类管理</a></li>
                     </ul>
                 </div>
                 <div class="left_m">
                     <div class="left_m_t t_bg4">咨询管理</div>
                     <ul>
-                        <li><a href="news.html">咨询列表</a></li>
-
+                        <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="news.html">咨询列表</a></li>
+                        <li><a href="user_news.html">所有咨询</a></li>
                     </ul>
                 </div>
             </div>
@@ -440,11 +444,12 @@
             async viewOrderList(currentNo) {
                 console.log(this.user.id)
                 await axios.get('http://localhost:8080/getOrderListByPage',{params:{
-                        currentNo:currentNo,
+                        currentPageNo:currentNo,
                         serialNumber:this.orderNumber,
                         userId:this.user.id
                     }})
                     .then((resp) => {
+                        console.log(resp)
                         this.AllOrders = resp.list;
                         this.pagination.current = resp.pageNum;
                         this.pagination.total = resp.total;
